--- a/package.json
+++ b/package.json
@@ -255,6 +255,7 @@
     "@types/react-redux": "^7.1.16",
     "antd": "^4.14.0",
     "autoprefixer": "^10.2.5",
+    "axios": "^0.21.1",
     "bilibili-live-ws": "^5.1.1",
     "electron-debug": "^3.1.0",
     "electron-log": "^4.2.4",
